@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.dramasonline"
        name="DramasOnline.com"
-       version="2.6.0"
+       version="2.6.1"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
